[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pyhops"
author = "sth-v"
author-email = "aa@contextmachine.ru"
home-page = "https://github.com/sth-v/pyhops"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ['cmake','dlib','rhino3dm', 'flask', 'requests']


[tool.flit.sdist]
exclude = [".vscode/", "docs/", "dist/", "examples/", ".env", "Pipfile", "Pipfile.lock", "README.md"]
